<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>

    <packaging>pom</packaging>
    <groupId>io.demo.crm</groupId>
    <artifactId>demo</artifactId>
    <version>${revision}</version>
    <name>demo</name>
    <description>demo</description>

    <properties>
        <revision>1.0.x</revision>
        <java.version>21</java.version>
        <shiro.version>2.0.1</shiro.version>
        <pagehelper.version>6.1.0</pagehelper.version>
        <quartz-starter.version>1.0.7</quartz-starter.version>
        <redisson-starter.version>3.39.0</redisson-starter.version>
        <mybatis-starter.version>3.0.3</mybatis-starter.version>
        <swagger.version>2.2.21</swagger.version>
        <springdoc-openapi-ui.version>2.4.0</springdoc-openapi-ui.version>
        <flatten.version>1.6.0</flatten.version>
        <minio.version>8.5.9</minio.version>
        <embedded.version>3.1.6</embedded.version>
        <mockserver-client-java.version>5.15.0</mockserver-client-java.version>
        <mariadb-java-client.version>3.5.0</mariadb-java-client.version>
        <!-- frontend -->
        <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
        <node.version>v20.8.1</node.version>
        <pnpm.version>8.4.0</pnpm.version>
        <!--        -->
        <skipAntRunForJenkins>false</skipAntRunForJenkins>
        <jacoco.version>0.8.12</jacoco.version>
        <!--   sonar     -->
        <sonar.organization>demo</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <swagger-core-jakarta.revision>2.2.20</swagger-core-jakarta.revision>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-io.version>2.15.1</commons-io.version>
        <testcontainers.version>1.20.3</testcontainers.version>
        <mybatis.generator.version>1.4.2</mybatis.generator.version>
    </properties>

    <modules>
        <module>frontend</module>
        <module>backend</module>
    </modules>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                    <include>**/*.json</include>
                    <include>**/*.tpl</include>
                    <include>**/*.js</include>
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>io/demo/crm/services*/mapper/**</exclude>
                        <exclude>io/demo/crm/services*/domain/**</exclude>
                        <exclude>io/demo/crm/common/**</exclude>
                        <exclude>io/demo/crm/**/config/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>demo-public</id>
            <url>https://repository.fit2cloud.com/repository/demo/</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>demo-public</id>
            <url>https://repository.fit2cloud.com/repository/demo/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
        <pluginRepository>
            <id>demo-public</id>
            <url>https://repository.fit2cloud.com/repository/demo/</url>
        </pluginRepository>
    </pluginRepositories>

</project>
